--- a/join.html
+++ b/join.html
@@ -18,7 +18,7 @@
         <nav class="nav-mobile">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <a href="work.html">Work</a>
+            <a href="work.html">Artists We Admire</a>
             <a href="people.html">People</a>
             <a href="curriculum.html">Curriculum</a>
             <a href="join.html" class="current">How to Join</a>
@@ -109,7 +109,7 @@
             <nav class="nav-desktop">
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
-                <a href="work.html">Work</a>
+                <a href="work.html">Artists We Admire</a>
                 <a href="people.html">People</a>
                 <a href="curriculum.html">Curriculum</a>
                 <a href="join.html" class="current">How to Join</a>
