updates artists we admire images

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h2>RISD's newest department. Join now and help shape what it becomes.</h2>
+                <h2>RISD's newest department. Join now and shape what it becomes.</h2>
             </div>
             <div class="hero-image-ticker">
                 <!-- Auto-rotates through selected images -->
@@ -37,26 +37,29 @@
         </section>
 
         <section>
-            <h2>What This Is</h2>
-            <p>Art & Computation isn't about bringing computers to art—it's about bringing art and poetics to computers. We treat computation as creative material, the way painters work with paint or sculptors work with clay. You learn to shape technology rather than just use it.</p>
+            <h2>What</h2>
+            <p>Art & Computation isn't about bringing computers to art—it's about bringing art and poetics to computers. Just as painters use paint or sculptors work with clay, we treat computation as creative material. In RISD's newest department you learn to shape technology rather than just use it.</p>
 
-            <p>This is a studio culture focused on making real things—prototypes, systems, tools, artworks. Build websites, games, robots. Visualize data, create 3D worlds, work with AI to develop new creative pipelines. Make custom digital tools. Not slideshows. Not just concepts. Actual work.</p>
+            <h2>Make Things</h2>
+            <p>Not just slideshows and concepts. Actual work. Within our studios we focus on making real things: prototypes, systems, tools, artworks. We build websites, games, robots. We visualize data, create 3D worlds. Work with AI to develop new creative pipelines. Make custom digital tools. </p>
+</p>
         </section>
 
         <section>
             <h2>Why Join Now</h2>
 
             <h3>You'll shape the department.</h3>
-            <p>We're new—RISD's first undergraduate department in 30 years. That means you're not just joining a program, you're helping define it. Your interests, your work, your questions will shape what Art & Computation becomes.</p>
+            <p>We are RISD's first undergraduate department in 30 years. That means when you join Art & Computation, you're not just enrolling in a program, you're helping define it. </p>
+            <p>Your interests. Your work. Your questions. All will shape what the department becomes.</p>
 
             <h3>Radical flexibility.</h3>
-            <p>One of RISD's most open curricula. Lots of electives. Multiple pathways. You can focus on art practice, design work, tech industry careers, or invent your own combination. Computational skills open every door.</p>
+            <p>Art & Computation is one of RISD's most open curricula. This means: lots of electives, multiple pathways. Here, you can focus on art practice, design work, tech industry careers, or invent your own combination. Computational skills open every door.</p>
 
             <h3>True interdisciplinarity.</h3>
-            <p>Want to work in the art world? Build a tech startup? Design for major companies? Do all three? The same computational foundation supports all of it. This isn't pre-professional training—it's learning to work with computation on your own terms.</p>
+            <p>Want to work in the art world? Build a tech startup? Design for major companies? Do all three? Art & Computation's foundation supports all of it. This isn't pre-professional training—it's learning to work with computation on your own terms.</p>
 
             <h3>Ground floor opportunity.</h3>
-            <p>We're building capacity—facilities, resources, networks. The students who join now help shape all of it. That's part of the education: being entrepreneurial, defining the future, building something from the ground up.</p>
+            <p>We're building capacity—facilities, resources, networks. Being entrepreneurial, defining the future, building something from the ground up, that's all part of the educational experience you'll create</p>
         </section>
 
         <section>
