--- a/people.html
+++ b/people.html
@@ -40,6 +40,7 @@
                 <li><a href="https://gabrieldrozdov.com" target="_blank">Gabriel Drosdov</a></li>
                 <li><a href="https://liviafoldes.com" target="_blank">Livia Foldes</a></li>
                 <li><a href="https://paulagaetanoadi.com" target="_blank">Paula Gaetano-Adi</a></li>
+                <li><a href="http://www.marisamazriakatz.com" target="_blank">Marisa Mazria Katz</a></li>
                 <li><a href="https://minkyoungkim.com" target="_blank">Minkyoung Kim</a></li>
                 <li><a href="https://joykoli.com" target="_blank">Joy Ko</a></li>
                 <li><a href="https://think-fast.creator-spring.com/hats" target="_blank">Nicholas Larson</a></li>
