Added pathways page, a pathways graphic editor in the /pathways/ subfolder,a s well as many minor fixes

--- a/events.html
+++ b/events.html
@@ -42,6 +42,16 @@
         </section>
 
         <section>
+            <h3>Script a Shirt</h3>
+            <div class="event-box">
+                <p><strong>Script a Shirt</strong><br>
+                College Building 521</p>
+                <p>Build an algorithm that designs custom art for clothes. For first year students curious about Art and Computation.</p>
+                <p>Email to sign up: <a href="mailto:artandcomputation@risd.edu">artandcomputation@risd.edu</a></p>
+            </div>
+        </section>
+
+        <section>
             <h2>Stop Making Sense</h2>
             <p>A lecture series featuring artists, technologists, and critical thinkers working at the intersection of art and computation. Part of the AaC course taught by Marisa Mazria Katz.</p>
 
@@ -182,7 +192,7 @@
     </main>
 
             <footer>
-                <p>Art & Computation — <a href="mailto:artandcomputation@risd.edu">artandcomputation@risd.edu</a></p>
+                <p>Art & Computation — <a href="mailto:artandcomputation@risd.edu">artandcomputation@risd.edu</a> — College Building 521</p>
             </footer>
         </div>
 
