--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </main>
 
             <footer>
-                <p>Art & Computation — <a href="mailto:artandcomputation@risd.edu">artandcomputation@risd.edu</a></p>
+                <p>Art & Computation — <a href="mailto:artandcomputation@risd.edu">artandcomputation@risd.edu</a> — College Building 521</p>
             </footer>
         </div>
 
