--- a/live.html
+++ b/live.html
@@ -32,20 +32,20 @@
             <p>Student work, faculty projects, and studio life. Auto-cycling through images. Use arrow keys or buttons to navigate.</p>
         </section>
 
-        <div id="slideshow-container" class="slideshow-container">
-            <!-- Images will be dynamically loaded here by slideshow.js -->
-        </div>
-
         <div class="slideshow-controls">
             <button id="prev-slide">← Prev</button>
             <span id="slide-counter">1 / 128</span>
             <button id="next-slide">Next →</button>
             <button id="pause-play">Pause</button>
         </div>
+
+        <div id="slideshow-container" class="slideshow-container">
+            <!-- Images will be dynamically loaded here by slideshow.js -->
+        </div>
     </main>
 
             <footer>
-                <p>Art & Computation — <a href="mailto:artandcomputation@risd.edu">artandcomputation@risd.edu</a></p>
+                <p>Art & Computation — <a href="mailto:artandcomputation@risd.edu">artandcomputation@risd.edu</a> — College Building 521</p>
             </footer>
         </div>
 
