--- a/work.html
+++ b/work.html
@@ -146,6 +146,17 @@
             </div>
 
             <div class="artist-card">
+                <a href="https://taliacotton.com/" target="_blank" rel="noopener noreferrer">
+                    <div class="artist-image">
+                        <img src="images/artists/taliacotton.png" alt="Work by Talia Cotton">
+                    </div>
+                    <div class="artist-info">
+                        <h4>Talia Cotton</h4>
+                    </div>
+                </a>
+            </div>
+
+            <div class="artist-card">
                 <a href="https://certainmeasures.com/" target="_blank" rel="noopener noreferrer">
                     <div class="artist-image">
                         <img src="images/artists/certainmeasures.jpeg" alt="Work by Certain Measures">
@@ -617,7 +628,7 @@
     </main>
 
             <footer>
-                <p>Art & Computation — <a href="mailto:artandcomputation@risd.edu">artandcomputation@risd.edu</a></p>
+                <p>Art & Computation — <a href="mailto:artandcomputation@risd.edu">artandcomputation@risd.edu</a> — College Building 521</p>
             </footer>
         </div>
 
