--- a/sidebar.html
+++ b/sidebar.html
@@ -2,11 +2,12 @@
 <nav class="nav-desktop">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <a href="work.html">Artists We Admire</a>
-    <a href="people.html">People</a>
     <a href="curriculum.html">Curriculum</a>
-    <a href="events.html">Events</a>
+    <a href="pathways.html">Pathways</a>
     <a href="join.html">How to Join</a>
+    <a href="events.html">Events</a>
+    <a href="people.html">People</a>
+    <a href="work.html">Artists We Admire</a>
     <a href="live.html">Live</a>
 </nav>
 
