updated some language and image lists

--- a/events.html
+++ b/events.html
@@ -18,11 +18,12 @@
         <nav class="nav-mobile">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <a href="work.html">Artists We Admire</a>
-            <a href="people.html">People</a>
             <a href="curriculum.html">Curriculum</a>
-            <a href="events.html" class="current">Events</a>
+            <a href="pathways.html">Pathways</a>
             <a href="join.html">How to Join</a>
+            <a href="events.html" class="current">Events</a>
+            <a href="people.html">People</a>
+            <a href="work.html">Artists We Admire</a>
             <a href="live.html">Live</a>
         </nav>
     </header>
@@ -63,8 +64,7 @@
                         <strong>Sam Lavigne / Tega Brain</strong>
                     </div>
                     <div class="lecture-dates">
-                        <span class="date">Tuesday Feb 17</span>
-                        <span class="date thursday">Thursday Feb 19</span>
+                        <span class="date">Thursday Feb 19</span>
                     </div>
                     <div class="lecture-info">
                         <p>Prov/Wash Auditorium</p>
@@ -76,8 +76,7 @@
                         <strong>Roopa Vasudevan</strong>
                     </div>
                     <div class="lecture-dates">
-                        <span class="date">Tuesday Feb 24</span>
-                        <span class="date thursday">Thursday Feb 26</span>
+                        <span class="date">Thursday Feb 26</span>
                     </div>
                     <div class="lecture-info">
                         <p>Location TBA</p>
@@ -89,21 +88,7 @@
                         <strong>Surya Mattu</strong>
                     </div>
                     <div class="lecture-dates">
-                        <span class="date">Tuesday Mar 3 (OSINT Workshop)</span>
                         <span class="date thursday">Thursday Mar 5</span>
-                    </div>
-                    <div class="lecture-info">
-                        <p>Prov/Wash Auditorium</p>
-                    </div>
-                </div>
-
-                <div class="lecture-week">
-                    <div class="week-header">
-                        <strong>Yawloo</strong>
-                    </div>
-                    <div class="lecture-dates">
-                        <span class="date">Tuesday Mar 10</span>
-                        <span class="date thursday">Thursday Mar 12</span>
                     </div>
                     <div class="lecture-info">
                         <p>Prov/Wash Auditorium</p>
@@ -115,8 +100,7 @@
                         <strong>Louis Leterrier</strong>
                     </div>
                     <div class="lecture-dates">
-                        <span class="date">Tuesday Mar 17</span>
-                        <span class="date thursday">Thursday Mar 19</span>
+                        <span class="date">Thursday Mar 19</span>
                     </div>
                     <div class="lecture-info">
                         <p>Prov/Wash Auditorium</p>
@@ -128,8 +112,7 @@
                         <strong>Rachel Rossin</strong>
                     </div>
                     <div class="lecture-dates">
-                        <span class="date">Tuesday Mar 31</span>
-                        <span class="date thursday">Thursday Apr 2</span>
+                        <span class="date">Thursday Apr 2</span>
                     </div>
                     <div class="lecture-info">
                         <p>Prov/Wash Auditorium</p>
@@ -141,8 +124,7 @@
                         <strong>Brian House</strong>
                     </div>
                     <div class="lecture-dates">
-                        <span class="date">Tuesday Apr 7</span>
-                        <span class="date thursday">Thursday Apr 9</span>
+                        <span class="date">Thursday Apr 9</span>
                     </div>
                     <div class="lecture-info">
                         <p>Prov/Wash Auditorium</p>
@@ -154,8 +136,7 @@
                         <strong>Paul Myoda</strong>
                     </div>
                     <div class="lecture-dates">
-                        <span class="date">Tuesday Apr 14</span>
-                        <span class="date thursday">Thursday Apr 16</span>
+                        <span class="date">Thursday Apr 16</span>
                     </div>
                     <div class="lecture-info">
                         <p>Location TBA</p>
@@ -167,21 +148,7 @@
                         <strong>Lindsay Caplan</strong>
                     </div>
                     <div class="lecture-dates">
-                        <span class="date">Tuesday Apr 21</span>
-                        <span class="date thursday">Thursday Apr 23</span>
-                    </div>
-                    <div class="lecture-info">
-                        <p>Prov/Wash Auditorium</p>
-                    </div>
-                </div>
-
-                <div class="lecture-week">
-                    <div class="week-header">
-                        <strong>Radical Media</strong>
-                    </div>
-                    <div class="lecture-dates">
-                        <span class="date">Tuesday Apr 28</span>
-                        <span class="date thursday">Thursday Apr 30</span>
+                        <span class="date">Thursday Apr 23</span>
                     </div>
                     <div class="lecture-info">
                         <p>Prov/Wash Auditorium</p>
