--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
         <nav class="nav-mobile">
             <a href="index.html" class="current">Home</a>
             <a href="about.html">About</a>
-            <a href="work.html">Artists We Admire</a>
-            <a href="people.html">People</a>
             <a href="curriculum.html">Curriculum</a>
-            <a href="events.html">Events</a>
+            <a href="pathways.html">Pathways</a>
             <a href="join.html">How to Join</a>
+            <a href="events.html">Events</a>
+            <a href="people.html">People</a>
+            <a href="work.html">Artists We Admire</a>
             <a href="live.html">Live</a>
         </nav>
     </header>
@@ -30,7 +31,7 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h2>RISD's newest department. Join now and shape what it becomes.</h2>
+                <h2>A new major for RISD. Join now and shape what it becomes.</h2>
             </div>
             <div class="hero-image-ticker">
                 <!-- Auto-rotates through selected images -->
@@ -50,7 +51,7 @@
             <h2>Why Join Now</h2>
 
             <h3>You'll shape the department.</h3>
-            <p>We are RISD's first undergraduate department in 30 years. That means when you join Art & Computation, you're not just enrolling in a program, you're helping define it. </p>
+            <p>We are a new major at RISD. That means when you join Art & Computation, you're not just enrolling in a program, you're helping define it. </p>
             <p>Your interests. Your work. Your questions. All will shape what the department becomes.</p>
 
             <h3>Radical flexibility.</h3>
