--- a/work.html
+++ b/work.html
@@ -18,10 +18,12 @@
         <nav class="nav-mobile">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <a href="work.html" class="current">Artists We Admire</a>
-            <a href="people.html">People</a>
             <a href="curriculum.html">Curriculum</a>
+            <a href="pathways.html">Pathways</a>
             <a href="join.html">How to Join</a>
+            <a href="events.html">Events</a>
+            <a href="people.html">People</a>
+            <a href="work.html" class="current">Artists We Admire</a>
             <a href="live.html">Live</a>
         </nav>
     </header>
