removed the word department throughout the website

--- a/curriculum.html
+++ b/curriculum.html
@@ -42,7 +42,7 @@
                 <li>Combine with other majors</li>
                 <li>Follow your interests as they develop</li>
                 <li>Take risks and experiment</li>
-                <li>Shape your own path through the department</li>
+                <li>Shape your own path through the major</li>
             </ul>
         </section>
 
@@ -51,7 +51,7 @@
             <ul>
                 <li><strong>First-Year Foundation:</strong> 18 credits</li>
                 <li><strong>Liberal Arts:</strong> 39 credits</li>
-                <li><strong>Non-Major Studio Electives:</strong> 12 credits (any department, including Brown)</li>
+                <li><strong>Non-Major Studio Electives:</strong> 12 credits (any major, including Brown)</li>
                 <li><strong>Major Credits:</strong> 51 credits total
                     <ul>
                         <li>CTC Core Studios: 21 credits</li>
