--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <section>
             <h2>What</h2>
-            <p>Art & Computation isn't about bringing computers to art—it's about bringing art and poetics to computers. Just as painters use paint or sculptors work with clay, we treat computation as creative material. In RISD's newest department you learn to shape technology rather than just use it.</p>
+            <p>Art & Computation isn't about bringing computers to art—it's about bringing art and poetics to computers. Just as painters use paint or sculptors work with clay, we treat computation as creative material. In RISD's newest major you learn to shape technology rather than just use it.</p>
 
             <h2>Make Things</h2>
             <p>Not just slideshows and concepts. Actual work. Within our studios we focus on making real things: prototypes, systems, tools, artworks. We build websites, games, robots. We visualize data, create 3D worlds. Work with AI to develop new creative pipelines. Make custom digital tools. </p>
@@ -50,9 +50,9 @@
         <section>
             <h2>Why Join Now</h2>
 
-            <h3>You'll shape the department.</h3>
+            <h3>You'll shape the major.</h3>
             <p>We are a new major at RISD. That means when you join Art & Computation, you're not just enrolling in a program, you're helping define it. </p>
-            <p>Your interests. Your work. Your questions. All will shape what the department becomes.</p>
+            <p>Your interests. Your work. Your questions. All will shape what the major becomes.</p>
 
             <h3>Radical flexibility.</h3>
             <p>Art & Computation is one of RISD's most open curricula. This means: lots of electives, multiple pathways. Here, you can focus on art practice, design work, tech industry careers, or invent your own combination. Computational skills open every door.</p>
