--- a/join.html
+++ b/join.html
@@ -41,7 +41,7 @@
                 <li>Build websites, games, work with robots, visualize data, build 3D worlds</li>
                 <li>Have flexibility to shape your own education</li>
                 <li>Keep your options open: art world, design career, tech industry, or invent your own path</li>
-                <li>Help build a new department from the ground up</li>
+                <li>Help build a new major from the ground up</li>
                 <li>Learn by doing in a studio culture</li>
             </ul>
             <p><strong>Then join Art & Computation.</strong></p>
@@ -49,7 +49,7 @@
 
         <section>
             <h3>Declaration Process</h3>
-            <p>[Declaration process details will be added here - contact department for current information]</p>
+            <p>[Declaration process details will be added here - contact program for current information]</p>
         </section>
 
         <section>
@@ -60,7 +60,7 @@
 
         <section>
             <h3>Questions?</h3>
-            <p><strong>Email:</strong> [Department contact email]</p>
+            <p><strong>Email:</strong> [Program contact email]</p>
             <p><strong>Drop by:</strong> [Office/studio location and hours]</p>
             <p><strong>Or come to the open house</strong> and ask in person.</p>
         </section>
@@ -74,7 +74,7 @@
             </div>
 
             <div class="faq-item">
-                <p><strong>The department is new—is that a problem?</strong></p>
+                <p><strong>The major is new—is that a problem?</strong></p>
                 <p>No, it's an opportunity. You get to shape what it becomes. That's part of the education: being entrepreneurial, defining the future, building something together.</p>
             </div>
 
