--- a/pathways.html
+++ b/pathways.html
@@ -50,7 +50,7 @@
     <main>
         <h2>Pathways</h2>
 
-        <p>Art & Computation offers multiple pathways through the curriculum. This diagram shows how different courses map onto the department's current focus areas. At the center of everything we do is the relationship between humans and computers.</p>
+        <p>Art & Computation offers multiple pathways through the curriculum. This diagram shows how different courses map onto the major's current focus areas. At the center of everything we do is the relationship between humans and computers.</p>
 
         <a href="https://www.risd.edu/academics/art-computation/courses" target="_blank" class="pathways-image-link">
             <img src="assets/ctc-pathways.png" alt="Course pathways diagram showing five focus areas: Generative Art, Worldbuilding and Gaming, Physical Computing, Digital Imaging, and Web and Networks, with Human-Machine relationships at the center">
