--- a/about.html
+++ b/about.html
@@ -37,14 +37,14 @@
 
             <p>This means treating code, algorithms, and computational systems as creative materials with their own affordances and constraints. It means humanizing technology—making it experimental, ethical, sustainable, deeply creative.</p>
 
-            <p>We're not a CS department. This is RISD's approach to computation: merging material-based making with computational thinking.</p>
+            <p>We're not a CS program. This is RISD's approach to computation: merging material-based making with computational thinking.</p>
         </section>
 
         <section>
             <h3>Making & Studio Culture</h3>
             <p>You learn by making real things. Build websites and games. Work with robots and AI systems. Visualize data. Create 3D worlds. Design custom digital tools and creative pipelines. Make prototypes, working systems, physical-digital hybrids. Tools you actually use. Art that functions.</p>
 
-            <p>This is a studio department—hands-on, collaborative, iterative.</p>
+            <p>This is a studio program—hands-on, collaborative, iterative.</p>
 
             <p><strong>We emphasize:</strong></p>
             <ul>
@@ -123,10 +123,10 @@
                 <li><strong>Priority enrollment</strong> - AAC majors get first access to courses and studios, ensuring you can build the curriculum you need</li>
                 <li><strong>Core studio sequence</strong> - Work closely with faculty across multiple semesters, developing sustained computational practice and critique</li>
                 <li><strong>Deep customization</strong> - Lots of electives mean you shape your own path: art practice, design work, tech industry preparation, or a hybrid you invent</li>
-                <li><strong>Studio culture & community</strong> - You're part of a department, not just taking courses. Peer collaboration, shared workspace, ongoing critique, collective learning</li>
+                <li><strong>Studio culture & community</strong> - You're part of a major, not just taking courses. Peer collaboration, shared workspace, ongoing critique, collective learning</li>
                 <li><strong>Material depth</strong> - Go beyond surface-level tools. Understand computational systems from the ground up: algorithms, data structures, machine learning, physical computing, graphics, networked systems</li>
                 <li><strong>Faculty mentorship</strong> - Direct relationships with faculty who guide your trajectory, connect you to opportunities, and help you build a sustained practice</li>
-                <li><strong>Shaping the future</strong> - As RISD's newest department, AAC majors actively define what this program becomes. Your interests and projects help set the direction</li>
+                <li><strong>Shaping the future</strong> - As RISD's newest major, AAC students actively define what this program becomes. Your interests and projects help set the direction</li>
             </ul>
 
             <p><strong>Bottom line:</strong> CTC gives you computational literacy. AAC makes you a computational practitioner. If you want to work <em>with</em> computation as a creative medium—not just understand it—the major is the path.</p>
@@ -141,7 +141,7 @@
 
         <section>
             <h3>The Opportunity</h3>
-            <p>We're RISD's first new undergraduate department in 30 years. That means:</p>
+            <p>We're one of RISD's newest undergraduate programs. That means:</p>
             <ul>
                 <li><strong>You help shape it</strong> - Your work, your interests, your questions define what this becomes</li>
                 <li><strong>Things move fast</strong> - New courses, new equipment, new partnerships develop based on what students need</li>
