small correction to about page

--- a/about.html
+++ b/about.html
@@ -150,6 +150,10 @@
             </ul>
             <p>This is your chance to define the future of computation, technology, art, and design at RISD. Not top-down. Together.</p>
         </section>
+
+        <section>
+            <p><em>Art & Computation is one of two BFA programs offered by RISD's Computation, Technology and Culture department.</em></p>
+        </section>
     </main>
 
             <footer>
